--- a/src/scss/partial/_mixin.scss
+++ b/src/scss/partial/_mixin.scss
@@ -1,76 +1,47 @@
-@mixin dflex(
-    $f_direction:null,
-    $a_items: null,
-    $j_content: null,
-) {
-    display: flex;
-    flex-direction: $f_direction;
-    align-items: $a_items;
-    justify-content: $j_content;
-}
-@mixin  position(
-    $position:null,
-    $top:null,
-    $bottom:null,
-    $left:null,
-    $right:null,
-) {
-    position: $position;
-    top: $top;
-    bottom: $bottom;
-    left: $left;
-  right:   $right;
-    
-}
-@mixin _Img(
+@mixin _main(
   $width: null,
   $height: null,
-  $margin: null,
-  $object_f: null,
-  $object_p: null,
-  $border: null,
-  $border_r: null,
-  $cursor: null
-) {
-  width: $width;
-  height: $height;
-  margin: $margin;
-  object-fit: $object_f;
-  object-position: $object_p;
-  border: $border;
-  border-radius: $border_r;
-  cursor: $cursor;
-}
-@mixin _txt(
-  $f_size: null,
-  $f_weight: null,
-  $colors: null,
-  $l_height: null,
-  $text_align: null,
   $margin: null,
   $padding: null,
-  $l_style: null,
-  $width: null,
-  $height: null,
-  $bg_color: null,
+  $position: null,
+  $top: null,
+  $left: null,
+  $f_size: null,
+  $color: null,
+  $cursor: null,
   $border: null,
-  $txt_decoration:null,
-  $transition:null,
-  $cursor: null
+  $border-radius: null,
+  $text-align: null,
+  $back-color: null,
+  $object_f: null,
+  $right: null,
+  $bottom: null,
+  $background: null,
+  $font_s: null,
+  $display: null,
+  $align_it: null,
+  $just_content: null
 ) {
-  font-size: $f_size;
-  font-weight: $f_weight;
-  color: $colors;
-  line-height: $l_height;
-  text-align: $text_align;
-  margin: $margin;
-  padding: $padding;
-  list-style: $l_style;
   width: $width;
   height: $height;
-  background-color: $bg_color;
-  border: $border;
-  text-decoration: $txt_decoration;
-  transition: $transition;
+  margin: $margin;
+  padding: $padding;
+  position: $position;
+  top: $top;
+  left: $left;
+  font-size: $f_size;
+  color: $color;
   cursor: $cursor;
+  border: $border;
+  border-radius: $border-radius;
+  text-align: $text-align;
+  background-color: $back-color;
+  object-fit: $object_f;
+  right: $right;
+  bottom: $bottom;
+  background: $background;
+  font-size: $font_s;
+  display: $display;
+  justify-content: $just_content;
+  align-items: $align_it;
 }
