--- a/src/scss/pages/home/_home.scss
+++ b/src/scss/pages/home/_home.scss
@@ -1,3 +1,111 @@
-body{
-   background-color: $gray-txtcolor !important; 
+
+#swiper_bundle{
+    position: relative;
+    background-color: #f3f3f3;
+padding: 30px 0;
+    .left_side{
+        position: relative;
+        z-index: 1;
+        text-align: start;
+        .header{
+           
+       gap: 15px;
+       width: 65%;
+       color: $black-color;
+       text-align: inherit;
+       font-size: 41px;
+
+            h3{
+              
+    font-weight: 400;  
+    font-family: $font-Playfair; 
+    margin: 0;
+    display: inline;
+    text-align: inherit;
+    font-size: 41px;
+
+            }
+    #flowers{
+        font-weight: 400;   
+        color: $orange-color;
+        text-align: inherit;
+        font-size: 41px; 
+    }  
+        }
+       #title{
+        width: 80%;
+        margin: 20px 0;
+        color: $gray-txtcolor;
+        line-height: 29px;
+        font-family: $font-Lora;
+       }
+    }
+       .rightside_img{
+        width: 100%;
+        img{
+            @keyframes sliderscale {
+                0%{
+                    transform: scale(1.4);
+                }
+                20%{
+                    transform: scale(1.06);
+                }
+                40%{
+                    transform: scale(1.08);
+                }
+                60%{
+                    transform: scale(1.10);
+                }
+                80%{
+                    transform: scale(1.12);
+                }
+                // 50%{
+                //     transform: scale(1.12);
+                // }
+                100%{
+                    transform: scale(1.15);
+                }
+                
+            }
+            width: 100%;
+            height: 400px;
+            object-fit: cover;
+            object-position:80% 100%;
+            animation-name:sliderscale ;
+            animation-duration: 5s;
+            animation-iteration-count: infinite;
+        }
+       }
+        .swiper {
+                margin-left: auto;
+                margin-right: auto;
+            width: 100%;
+            
+            .swiper-slide {
+                text-align: center;
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: -webkit-flex;
+                display: flex;
+                -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                -webkit-justify-content: center;
+                justify-content: center;
+                -webkit-box-align: center;
+                -ms-flex-align: center;
+                -webkit-align-items: center;
+                align-items: center;
+              
+              }
+
+          }
+    
+          
+    
+         
+    
+         
+}
+#filter{
+    
 }
