--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -667,4 +667,85 @@ nav .navbar #cart_add p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#filter {
+  /* Create three equal columns that floats next to each other */
+  /* Add a dark background color to the active button */
+}
+#filter .column {
+  display: none;
+}
+#filter .column .content {
+  text-align: center;
+  background-color: white;
+  padding: 10px;
+}
+#filter .column .content:hover .card_price #price {
+  transform: translateX(0px);
+  opacity: 0;
+}
+#filter .column .content:hover .card_price #addcart {
+  transform: translateX(10px);
+  opacity: 1;
+}
+#filter .column .content img {
+  width: 100%;
+  height: 320px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  transition: 0.3s ease-in-out;
+}
+#filter .column .content img:hover {
+  transform: scale(1.03);
+}
+#filter .column .content h4 {
+  font-size: 12px;
+  color: #1B1B1B;
+  font-family: "Montserrat", sans-serif;
+  margin-top: 20px;
+}
+#filter .column .content .card_price {
+  display: flex;
+  justify-content: center;
+}
+#filter .column .content .card_price #price {
+  color: #AFAFAF;
+  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  transition: 0.2s ease-in-out;
+  transform: translateX(-35px);
+}
+#filter .column .content .card_price #addcart {
+  transition: 0.2s ease-in-out;
+  opacity: 0;
+  transform: translateX(-50px);
+  color: #AFAFAF;
+  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  cursor: pointer;
+}
+#filter .column .content .card_price #addcart:hover {
+  color: #FF0000;
+}
+#filter .show {
+  display: block;
+}
+#filter .btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: white;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+}
+#filter .btn:hover {
+  color: #FF0000;
+}
+#filter .btn.active {
+  color: #FF0000;
 }/*# sourceMappingURL=style.css.map */
