--- a/src/scss/pages/home/_home.scss
+++ b/src/scss/pages/home/_home.scss
@@ -172,7 +172,7 @@
   }
 
   /* Add a dark background color to the active button */
-  .btn.active {
+   .active {
     color: $orange-color;
   }
 }
