--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -35,7 +35,7 @@ nav .navbar ul {
   display: flex;
   align-items: center;
   flex-direction: row;
-  gap: 35px;
+  gap: 25px;
   list-style-type: none;
 }
 nav .navbar ul li {
@@ -555,11 +555,106 @@ nav .navbar #cart_add {
   align-items: center;
   gap: 13px;
   font-weight: 500;
+  position: relative;
 }
 nav .navbar #cart_add p {
   margin: 0px;
   padding: 0px;
   font-size: 14px;
+}
+nav .navbar #cart_add .total_item {
+  position: absolute;
+  top: -1px;
+  left: 11px;
+  width: 13px;
+  height: 13px;
+  background-color: #F34F3F;
+  font-size: 8px;
+  color: #fff;
+  font-weight: 600;
+  line-height: 1.5em;
+  border-radius: 50%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+nav .navbar #cart_add:hover .carts {
+  display: block;
+}
+nav .navbar #cart_add .carts {
+  background-color: #fff;
+  z-index: 999;
+  position: absolute;
+  top: 75px;
+  left: -80px;
+  display: none;
+  flex-direction: column;
+  width: 250px;
+  padding: 10px;
+}
+nav .navbar #cart_add .carts .cart-item {
+  width: 100%;
+  margin: 5px 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+nav .navbar #cart_add .carts .cart-item .item-info {
+  width: 100%;
+  display: flex;
+}
+nav .navbar #cart_add .carts .cart-item .item-info .item_img {
+  width: 30%;
+}
+nav .navbar #cart_add .carts .cart-item .item-info .item_img img {
+  width: 50px;
+  height: 70px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+nav .navbar #cart_add .carts .cart-item .item-info .item_desc h4 {
+  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  color: #1B1B1B;
+}
+nav .navbar #cart_add .carts .cart-item .item-info .item_desc .unit-price span {
+  font-size: 12px;
+  font-family: "Montserrat", sans-serif;
+  color: #AFAFAF;
+}
+nav .navbar #cart_add .carts .subtotal {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0px;
+  background-color: white;
+  font-size: 14px;
+  width: 100%;
+  color: #2B2B2B;
+}
+nav .navbar #cart_add .carts .cart_footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+nav .navbar #cart_add .carts .cart_footer button {
+  width: 45%;
+  height: 40px;
+  border: none;
+  line-height: 40px;
+  padding: 0 18px;
+  font-size: 9px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  color: #fff;
+  background-color: #F34F3F;
+  text-align: center;
+  cursor: pointer;
+}
+nav .navbar #cart_add .carts .cart_footer #black {
+  background-color: #000000;
 }
 
 #swiper_bundle {
@@ -746,6 +841,6 @@ nav .navbar #cart_add p {
 #filter .btn:hover {
   color: #FF0000;
 }
-#filter .btn.active {
+#filter .active {
   color: #FF0000;
 }/*# sourceMappingURL=style.css.map */
